# softspoken-implementation-cryptotools

./: CMakeLists.txt
cmake/: cryptoToolsDepHelper.cmake
cryptoTools/: CMakeLists.txt
cryptoTools/Common/: BitIterator.h  BitVector.cpp  Defines.h  MatrixView.h  Timer.h  block.h  config.h.in
cryptoTools/Crypto/: AES.cpp  AES.h  PRNG.cpp  PRNG.h  SodiumCurve.h
cryptoTools/Network/: Channel.h
